--- a/raBiProject/test-output/emailable-report.html
+++ b/raBiProject/test-output/emailable-report.html
@@ -8,11 +8,35 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,144</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num attn">2</td><td class="num">0</td><td class="num attn">2</td><td class="num">47,130</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">endTOend.raBiProject.com_test</td><td><a href="#m0">pageNavigation</a></td><td rowspan="1">1614628376362</td><td rowspan="1">27070</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">endTOend.raBiProject.Data_Driven</td><td><a href="#m0">exitup</a></td><td rowspan="1">1619553576891</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">endTOend.raBiProject.Data_Driven</td><td><a href="#m1">pageNavigation</a></td><td rowspan="1">1619553568706</td><td rowspan="1">8183</td></tr><tr class="failedodd"><td rowspan="1">endTOend.raBiProject.createJob</td><td><a href="#m2">pageNavigation</a></td><td rowspan="1">1619553532313</td><td rowspan="1">15076</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="4">endTOend.raBiProject.Data_Driven</td><td><a href="#m3">exitup</a></td><td rowspan="2">1619553576901</td><td rowspan="2">-1619553576901</td></tr><tr class="skippedeven"><td><a href="#m4">exitup</a></td></tr><tr class="skippedeven"><td><a href="#m5">setup</a></td><td rowspan="2">1619553576898</td><td rowspan="2">-1619553576898</td></tr><tr class="skippedeven"><td><a href="#m6">setup</a></td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">endTOend.raBiProject.Data_Driven</td><td><a href="#m7">pageNavigation</a></td><td rowspan="2">1619553576895</td><td rowspan="2">0</td></tr><tr class="skippedeven"><td><a href="#m8">pageNavigation</a></td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">endTOend.raBiProject.home_page</td><td><a href="#m9">pageNavigation</a></td><td rowspan="1">1619553553514</td><td rowspan="1">13192</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">endTOend.raBiProject.com_test#pageNavigation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">endTOend.raBiProject.Data_Driven#exitup</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at endTOend.raBiProject.Data_Driven.exitup(Data_Driven.java:122)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">endTOend.raBiProject.Data_Driven#pageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Maggie.Manning</td><td>Maggie Manning</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: expected [automation engineer] but found [OrangeHRM]
+	at endTOend.raBiProject.Data_Driven.pageNavigation(Data_Driven.java:53)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">endTOend.raBiProject.createJob#pageNavigation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at endTOend.raBiProject.createJob.pageNavigation(createJob.java:66)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">endTOend.raBiProject.Data_Driven#exitup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">endTOend.raBiProject.Data_Driven#exitup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">endTOend.raBiProject.Data_Driven#setup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">endTOend.raBiProject.Data_Driven#setup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">endTOend.raBiProject.Data_Driven#pageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Nina.Patel</td><td>Nina Patel</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NullPointerException
+	at endTOend.raBiProject.Data_Driven.exitup(Data_Driven.java:122)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">endTOend.raBiProject.Data_Driven#pageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Charlie.Carter</td><td>Charlie Carter</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NullPointerException
+	at endTOend.raBiProject.Data_Driven.exitup(Data_Driven.java:122)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">endTOend.raBiProject.home_page#pageNavigation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
