--- a/raBiProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/raBiProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bddad">  <td>21/03/02 01:22:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com_test.pageNavigation()[pri:0, instance:endTOend.raBiProject.com_test@41e1e210]">pageNavigation</td> 
-  <td>main@1276709283</td>   <td></td> </tr>
+<tr bgcolor="d18979">  <td>21/04/28 01:27:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;createJob.exitup()[pri:0, instance:endTOend.raBiProject.createJob@212b5695]">&lt;&lt;exitup</td> 
+<td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
+<tr bgcolor="d18979">  <td>21/04/28 01:27:33</td>   <td>-18409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="createJob.pageNavigation()[pri:0, instance:endTOend.raBiProject.createJob@212b5695]">pageNavigation</td> 
+  <td>main@510276116</td>   <td></td> </tr>
+<tr bgcolor="d18979">  <td>21/04/28 01:27:30</td>   <td>-20631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;createJob.setup()[pri:0, instance:endTOend.raBiProject.createJob@212b5695]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
 </table>
