--- a/raBiProject/test-output/old/Default suite/methods.html
+++ b/raBiProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>21/05/08 13:10:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assignleave_test.leave_assign()[pri:0, instance:endTOend.raBiProject.assignleave_test@5ee2b6f9]">leave_assign</td> 
-  <td>main@1476235721</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>21/05/08 13:10:54</td>   <td>-4698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assignleave_test.setup()[pri:0, instance:endTOend.raBiProject.assignleave_test@5ee2b6f9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1476235721</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>21/05/08 13:11:16</td>   <td>16650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assignleave_test.exitup()[pri:0, instance:endTOend.raBiProject.assignleave_test@5ee2b6f9]">&lt;&lt;exitup</td> 
-<td>&nbsp;</td>  <td>main@1476235721</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/05/11 02:14:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="extentReports_vacancies.add_skills()[pri:0, instance:endTOend_raBiProject.extentReports_vacancies@256f8274]">add_skills</td> 
+  <td>main@1406253491</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/05/11 02:14:53</td>   <td>18800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;extentReports_vacancies.exitup()[pri:0, instance:endTOend_raBiProject.extentReports_vacancies@256f8274]">&lt;&lt;exitup</td> 
+<td>&nbsp;</td>  <td>main@1406253491</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/05/11 02:14:32</td>   <td>-2153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;extentReports_vacancies.setup()[pri:0, instance:endTOend_raBiProject.extentReports_vacancies@256f8274]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1406253491</td>   <td></td> </tr>
 </table>
