--- a/raBiProject/test-output/old/Default suite/classes.html
+++ b/raBiProject/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>endTOend.raBiProject.assignleave_test</td>
+<td>endTOend_raBiProject.extentReports_vacancies</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>leave_assign</td>
+<td>add_skills</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
