11th July Commit

--- a/raBiProject/test-output/index.html
+++ b/raBiProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rbran\AppData\Local\Temp\testng-eclipse-1776333871\testng-customsuite.xml</span>
+                    <span>C:\Users\rbran\AppData\Local\Temp\testng-eclipse--627234027\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -133,7 +133,7 @@
                   <div class="stack-trace">org.apache.commons.mail.EmailException: Sending the email to the following server failed : smtp.gmail.com:465
 	at org.apache.commons.mail.Email.sendMimeMessage(Email.java:1469)
 	at org.apache.commons.mail.Email.send(Email.java:1496)
-	at Methods.util.emails(util.java:59)
+	at Methods.util.emails(util.java:76)
 	at endTOend_raBiProject.listeners_addskill.add_skills(listeners_addskill.java:130)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
@@ -164,11 +164,11 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 Caused by: javax.mail.AuthenticationFailedException: 535-5.7.8 Username and Password not accepted. Learn more at
-535 5.7.8  https://support.google.com/mail/?p=BadCredentials v21sm5118616pgh.12 - gsmtp
+535 5.7.8  https://support.google.com/mail/?p=BadCredentials i10sm6615979pfk.74 - gsmtp
 
-	at com.sun.mail.smtp.SMTPTransport$Authenticator.authenticate(SMTPTransport.java:932)
-	at com.sun.mail.smtp.SMTPTransport.authenticate(SMTPTransport.java:843)
-	at com.sun.mail.smtp.SMTPTransport.protocolConnect(SMTPTransport.java:748)
+	at com.sun.mail.smtp.SMTPTransport$Authenticator.authenticate(SMTPTransport.java:965)
+	at com.sun.mail.smtp.SMTPTransport.authenticate(SMTPTransport.java:876)
+	at com.sun.mail.smtp.SMTPTransport.protocolConnect(SMTPTransport.java:780)
 	at javax.mail.Service.connect(Service.java:388)
 	at javax.mail.Service.connect(Service.java:246)
 	at javax.mail.Service.connect(Service.java:195)
@@ -185,7 +185,7 @@ Caused by: javax.mail.AuthenticationFailedException: 535-5.7.8 Username and Pass
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rbran\AppData\Local\Temp\testng-eclipse-1776333871\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rbran\AppData\Local\Temp\testng-eclipse--627234027\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -238,12 +238,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'add_skills')
 data.setCell(0, 2, 'endTOend_raBiProject.listeners_addskill')
-data.setCell(0, 3, 49179);
+data.setCell(0, 3, 55462);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 49 seconds</span>
+              <span class="suite-total-time">Total running time: 55 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -278,11 +278,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">add_skills</span>
-                <span class="method-start">11363 ms</span>
+                <span class="method-start">2354 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">exitup</span>
-                <span class="method-start">60549 ms</span>
+                <span class="method-start">57822 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
